apps/bgd/base/bgd-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lama
  name: lama
  namespace: lama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lama
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: lama
    spec:
      containers:
      - image: quay.io/redhatworkshops/bgd:latest
        name: lama
        resources: {}
