apps/bgd/base/bgd-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lama
  name: lama
  namespace: lama
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: lama
---
