apps/bgd/base/bgd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lama
spec:
  rules:
    - host: lamanawang.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lama
                port:
                  number: 8080
